Bug 712748 - uriloader did not recognize ".jpg" filename extension because Android returned ".jpeg". r=cpeterson